third_party/rust/rayon/tests/compile-fail/rc_return.rs
extern
crate
rayon
;
use
std
:
:
rc
:
:
Rc
;
fn
main
(
)
{
rayon
:
:
join
(
|
|
Rc
:
:
new
(
22
)
|
|
(
)
)
;
rayon
:
:
join
(
|
|
(
)
|
|
Rc
:
:
new
(
23
)
)
;
}
